--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,9 @@
     <string name="tanpa_diskon">Tanpa Diskon</string>
     <string name="bagikan">Bagikan</string>
     <string name="kembali">Kembali</string>
+    <string name="tambah_catatan">Tambah catatan.</string>
+    <string name="list_kosong">Tambah catatan.</string>
+    <string name="x_diklik">%1$s diklik!</string>
     <string name="profil">Profil Pembuat</string>
     <string name="gambar">Gambar %1$s</string>
     <string name="dine_in">Dine-In</string>
