Harusnya Menu nya banyak foto

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,22 +3,22 @@
     <string name="masuk">Selamat Datang di FOOD ESTATE</string>
 
     <string name="tentang_aplikasi">Tentang Aplikasi</string>
-    <string name="Makanan" translatable="false">Nama Makanan</string>
-    <string name="b_inggris">Bahasa Inggris</string>
+    <string name="Makanan">Nama Makanan</string>
+    <string name="b_inggris" translatable="false">Bahasa Inggris</string>
     <string name="makanan"> Harga Makanan</string>
     <string name="jumlah_pesan">Jumlah Pesan</string>
     <string name="input_invalid">Masukan Salah</string>
     <string name="hitung">Hitung</string>
     <string name="total_harga">Total Harga: %1$.2f</string>
-    <string name="sangat_baik">Sangat Baik</string>
+    <string name="sangat_baik" translatable="false">Sangat Baik</string>
     <string name="diskon_besar">Diskon Besar</string>
     <string name="diskon_sedang">Diskon Sedang</string>
     <string name="tanpa_diskon">Tanpa Diskon</string>
     <string name="bagikan">Bagikan</string>
     <string name="kembali">Kembali</string>
     <string name="tambah_catatan">Tambah catatan.</string>
-    <string name="list_kosong">Tambah catatan.</string>
-    <string name="x_diklik">%1$s diklik!</string>
+    <string name="list_kosong" translatable="false">Tambah catatan.</string>
+    <string name="x_diklik" translatable="false">%1$s diklik!</string>
     <string name="profil">Profil Pembuat</string>
     <string name="gambar">Gambar %1$s</string>
     <string name="dine_in">Dine-In</string>
